--- a/pwa/package.json
+++ b/pwa/package.json
@@ -30,6 +30,7 @@
     "@ionic/angular": "^8.0.0",
     "firebase": "^10.11.1",
     "ionicons": "^7.0.0",
+    "ng2-search-filter": "^0.5.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
